feat: add k3s support

--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -1,12 +1,39 @@
 ---
 all:
-  hosts:
-    proxmox-ssh:
-      ansible_host: 10.0.0.10
-      ansible_user: root
-      ansible_connection: ssh
-      ansible_ssh_pass: "{{ lookup('amazon.aws.aws_ssm', '/homelab/proxmox_root_password') }}"
-    proxmox-tailscale:
-      ansible_host: 100.85.178.8
-      ansible_user: root
-      ansible_connection: ssh
+  children:
+    # SSH hosts use password authentication for initial provisioning only.
+    # After Tailscale is installed, password and SSH key authentication are disabled.
+    ssh_hosts:
+      hosts:
+        proxmox-ssh:
+          ansible_host: 10.0.0.10
+          ansible_user: root
+        control-node-ssh:
+          ansible_host: 10.0.0.11
+          ansible_user: ubuntu
+        worker-node-1-ssh:
+          ansible_host: 10.0.0.12
+          ansible_user: ubuntu
+        worker-node-2-ssh:
+          ansible_host: 10.0.0.13
+          ansible_user: ubuntu
+      vars:
+        ansible_connection: ssh
+        ansible_ssh_pass: "{{ lookup('amazon.aws.aws_ssm', '/homelab/root_password') }}"
+
+    tailscale_hosts:
+      hosts:
+        proxmox-tailscale:
+          ansible_host: 100.85.178.8
+          ansible_user: root
+        control-node-tailscale:
+          ansible_host: 100.88.162.100
+          ansible_user: ubuntu
+        worker-node-1-tailscale:
+          ansible_host: 100.68.97.68
+          ansible_user: ubuntu
+        worker-node-2-tailscale:
+          ansible_host: 100.116.205.52
+          ansible_user: ubuntu
+      vars:
+        ansible_connection: ssh
