--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-roles_path = /workspace/ansible/roles
-inventory = /workspace/ansible/inventory/hosts.yml
+roles_path = ./roles:/workspace/ansible/roles
+inventory = ./inventory/hosts.yml:/workspace/ansible/inventory/hosts.yml
 host_key_checking = False
 retry_files_enabled = False
 stdout_callback = yaml
