feat: add kubectl support

--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -37,3 +37,21 @@ all:
           ansible_user: ubuntu
       vars:
         ansible_connection: ssh
+
+    # Hosts for k3s-ansible collection
+    k3s_cluster:
+      children:
+        server:
+          hosts:
+            100.88.162.100:
+        agent:
+          hosts:
+            100.68.97.68:
+            100.116.205.52:
+      vars:
+        ansible_port: 22
+        ansible_user: ubuntu
+        k3s_version: v1.34.1+k3s1
+        token: "{{ lookup('amazon.aws.aws_ssm', '/homelab/k3s_token') }}"
+        api_endpoint: "{{ hostvars[groups['server'][0]]['ansible_host'] | default(groups['server'][0]) }}"
+        api_port: 6443
