--- a/ansible/roles/tailscale/tasks/main.yml
+++ b/ansible/roles/tailscale/tasks/main.yml
@@ -1,15 +1,18 @@
 ---
 - name: Download GPG key
+  become: true
   ansible.builtin.uri:
     dest: /usr/share/keyrings/tailscale-archive-keyring.gpg
     url: https://pkgs.tailscale.com/stable/ubuntu/noble.noarmor.gpg
 
 - name: Add package signing repository
+  become: true
   ansible.builtin.uri:
     dest: /etc/apt/sources.list.d/tailscale.list
     url: https://pkgs.tailscale.com/stable/ubuntu/noble.tailscale-keyring.list
 
 - name: Install tailscale package
+  become: true
   ansible.builtin.apt:
     name: tailscale
     update_cache: true
@@ -22,37 +25,12 @@
   changed_when: false
 
 - name: Connect to tailscale
+  become: true
   ansible.builtin.command: tailscale up --authkey={{ tailscale_auth_key }} --ssh
   when: "'not logged in' in tailscale_status.stderr or tailscale_status.rc != 0"
 
-- name: Install UFW
-  ansible.builtin.apt:
-    name: ufw
-    state: present
-
-- name: Reset UFW to defaults
-  community.general.ufw:
-    state: reset
-
-- name: Allow SSH access only through Tailscale
-  community.general.ufw:
-    rule: allow
-    interface: tailscale0
-    port: "22"
-    proto: tcp
-    direction: in
-
-- name: Deny SSH access from all other interfaces
-  community.general.ufw:
-    rule: deny
-    port: "22"
-    proto: tcp
-
-- name: Enable UFW
-  community.general.ufw:
-    state: enabled
-
 - name: Disable SSH password authentication
+  become: true
   ansible.builtin.lineinfile:
     path: /etc/ssh/sshd_config
     regexp: "^#?PasswordAuthentication="
@@ -60,6 +38,66 @@
     backup: yes
 
 - name: Restart SSH service
+  become: true
   ansible.builtin.systemd:
     name: ssh
     state: restarted
+
+- name: Install UFW
+  become: true
+  ansible.builtin.apt:
+    name: ufw
+    state: present
+
+- name: Reset UFW to defaults
+  become: true
+  community.general.ufw:
+    state: reset
+
+- name: Allow SSH access only through Tailscale
+  become: true
+  community.general.ufw:
+    rule: allow
+    interface: tailscale0
+    port: "22"
+    proto: tcp
+    direction: in
+
+- name: Set UFW default incoming policy to deny
+  become: true
+  community.general.ufw:
+    direction: incoming
+    policy: deny
+
+- name: Set UFW default outgoing policy to allow
+  become: true
+  community.general.ufw:
+    direction: outgoing
+    policy: allow
+
+- name: Allow k3s API server port (6443/tcp)
+  become: true
+  community.general.ufw:
+    rule: allow
+    port: "6443"
+    proto: tcp
+    comment: "k3s API server"
+
+- name: Allow k3s pod network (10.42.0.0/16)
+  become: true
+  community.general.ufw:
+    rule: allow
+    from_ip: 10.42.0.0/16
+    comment: "k3s pod network"
+
+- name: Allow k3s service network (10.43.0.0/16)
+  become: true
+  community.general.ufw:
+    rule: allow
+    from_ip: 10.43.0.0/16
+    comment: "k3s service network"
+
+- name: Enable UFW
+  become: true
+  community.general.ufw:
+    state: enabled
