--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -24,6 +24,15 @@
     - role: tailscale
       tags: [k3s]
 
+- name: Disable Firewall
+  hosts:
+    - control-node-tailscale
+    - worker-node-1-tailscale
+    - worker-node-2-tailscale
+  roles:
+    - role: firewall
+      tags: [k3s]
+
 - name: Configure k3s Nodes
   hosts: control-node-ssh,worker-node-1-ssh,worker-node-2-ssh
   become: true
