--- a/terraform/modules/kubernetes/apps/commafeed.yaml
+++ b/terraform/modules/kubernetes/apps/commafeed.yaml
@@ -1,4 +1,22 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: commafeed
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: commafeed-data
+  namespace: commafeed
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  storageClassName: local-path
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -38,3 +56,33 @@ spec:
         - name: data
           persistentVolumeClaim:
             claimName: commafeed-data
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: commafeed-service
+  namespace: commafeed
+spec:
+  selector:
+    app: commafeed
+  type: ClusterIP
+  ports:
+    - protocol: TCP
+      port: 8082
+      targetPort: 8082
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: commafeed-ingress
+  namespace: commafeed
+spec:
+  ingressClassName: tailscale
+  defaultBackend:
+    service:
+      name: commafeed-service
+      port:
+        number: 8082
+  tls:
+    - hosts:
+        - rss
