--- a/ansible/playbooks/install_vault.yml
+++ b/ansible/playbooks/install_vault.yml
@@ -53,7 +53,7 @@
       ansible.builtin.copy:
         content: |
           storage "s3" {
-            bucket = "{{ s3_bucket_name }}"
+            bucket = "seagram-homelab-vault-storage"
             region = "us-east-1"
           }
 
@@ -107,7 +107,7 @@
 
     - name: Upload Vault keys to S3
       amazon.aws.s3_object:
-        bucket: "{{ s3_bucket_name }}"
+        bucket: "seagram-homelab-vault-storage"
         object: vault-init-keys.json
         src: /tmp/vault-init-keys.json
         mode: put
@@ -122,7 +122,7 @@
 
     - name: Display initialization message
       ansible.builtin.debug:
-        msg: "Vault initialized. Keys saved to s3://{{ s3_bucket_name }}/vault-init-keys.json with encryption. SAVE THESE SECURELY!"
+        msg: "Vault initialized. Keys saved to s3://seagram-homelab-vault-storage/vault-init-keys.json with encryption. SAVE THESE SECURELY!"
       when: not vault_init_status.json.initialized
 
     - name: Display already initialized message
