--- a/kubernetes/longhorn/values.yaml
+++ b/kubernetes/longhorn/values.yaml
@@ -21,3 +21,10 @@ longhornManager:
     - key: node-role.kubernetes.io/control-plane
       operator: Exists
       effect: NoSchedule
+
+ingress:
+  enabled: true
+  ingressClassName: tailscale
+  host: longhorn
+  tls: true
+  tlsSecret: ""
