--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,6 +1,3 @@
 ---
-roles:
-  - name: robertdebock.bootstrap
-  - name: robertdebock.core_dependencies
-  - name: robertdebock.hashicorp
-  - name: robertdebock.vault
+collections:
+  - name: community.general
