--- a/ansible/roles/ssh_security/tasks/main.yml
+++ b/ansible/roles/ssh_security/tasks/main.yml
@@ -1,65 +1,44 @@
 ---
-- name: Check if SSH password authentication is already disabled
-  ansible.builtin.command: grep -E "^PasswordAuthentication=no" /etc/ssh/sshd_config
-  register: password_auth_check
-  changed_when: false
-  failed_when: false
-
-- name: Disable SSH password authentication
-  ansible.builtin.lineinfile:
-    path: /etc/ssh/sshd_config
-    regexp: "^#?PasswordAuthentication="
-    line: "PasswordAuthentication=no"
-    backup: yes
-  register: ssh_config_changed
-  when: password_auth_check.rc != 0
-
-- name: Restart SSH service
-  ansible.builtin.systemd:
-    name: ssh
-    state: restarted
-  when: ssh_config_changed is changed
-
-- name: Check if UFW is installed
-  ansible.builtin.command: which ufw
-  register: ufw_installed
-  changed_when: false
-  failed_when: false
-
 - name: Install UFW
   ansible.builtin.apt:
     name: ufw
     state: present
-    update_cache: yes
-  when: ufw_installed.rc != 0
 
-- name: Check UFW status
-  ansible.builtin.command: ufw status
-  register: ufw_status
-  changed_when: false
-  failed_when: false
-
-- name: Check if UFW is already configured
-  ansible.builtin.shell: ufw status | grep -q "22/tcp.*ALLOW.*Anywhere on tailscale0"
-  register: ufw_configured
-  changed_when: false
-  failed_when: false
-
-- name: Reset UFW to defaults
+- name: Set UFW default deny incoming
   community.general.ufw:
-    state: reset
-  when: ufw_configured.rc != 0
+    direction: incoming
+    default: deny
 
-- name: Allow SSH access only through Tailscale
+- name: Set UFW default allow outgoing
+  community.general.ufw:
+    direction: outgoing
+    default: allow
+
+- name: Allow all traffic on tailscale0
   community.general.ufw:
     rule: allow
     interface: tailscale0
-    port: "22"
-    proto: tcp
     direction: in
-  when: ufw_configured.rc != 0
 
 - name: Enable UFW
   community.general.ufw:
     state: enabled
-  when: "'Status: active' not in ufw_status.stdout"
+
+- name: Harden sshd configuration
+  ansible.builtin.lineinfile:
+    path: /etc/ssh/sshd_config
+    regexp: "^#?{{ item.key }}\\s"
+    line: "{{ item.key }} {{ item.value }}"
+    validate: "sshd -t -f %s"
+  loop:
+    - { key: "PermitRootLogin", value: "no" }
+    - { key: "PasswordAuthentication", value: "no" }
+    - { key: "PubkeyAuthentication", value: "yes" }
+    - { key: "MaxAuthTries", value: "3" }
+  register: sshd_config_changed
+
+- name: Restart sshd
+  ansible.builtin.systemd:
+    name: ssh
+    state: restarted
+  when: sshd_config_changed is changed
