--- a/ansible/tasks/tailscale.yml
+++ b/ansible/tasks/tailscale.yml
@@ -44,7 +44,7 @@
   when: tailscale_status.rc == 0
 
 - name: Connect to tailscale
-  ansible.builtin.command: tailscale up --authkey={{ tailscale_auth_key }} --ssh
+  ansible.builtin.command: tailscale up --authkey={{ lookup('env', 'TAILSCALE_AUTH_KEY') }} --ssh
   when: >
     tailscale_status.rc != 0 or
     'not logged in' in tailscale_status.stderr or
@@ -63,6 +63,6 @@
   when: tailscale_connected is changed or not ssh_status.status.ActiveState == "active"
 
 - name: Configure Tailscale serve
-  ansible.builtin.command: tailscale serve --service=svc:proxmox --https=443 --bg https+insecure://localhost:8006
+  ansible.builtin.command: tailscale serve --https=443 --bg https+insecure://localhost:8006
   when: tailscale_status.rc == 0 or tailscale_connected is changed
   changed_when: true
